# optimizedScheduler

./: .gitignore  Doxyfile  README.md  build_docker_images.sh  convert_json2csv.sh  generate_charts.py  makefile  monitor_metrics.py  run_analysis_local.sh  run_docker_containers.sh
Iteration_0/: Dockerfile  iteration_0  main.c  valgrind_result
Iteration_1/: Dockerfile  main.c
Iteration_2/: Dockerfile  main.c
Iteration_2/Doc/: Introduction_to_Algorithms_third_edition.bibtex  citation.bib
Iteration_3/: Dockerfile  main.c
Iteration_4/: CMakeLists.txt  Dockerfile  main.c
Iteration_5/: Dockerfile  main.c
Iteration_6/: Dockerfile  main.c
Iteration_7/: CMakeLists.txt  Dockerfile  energy_manager.c  energy_manager.h  error_handling.c  error_handling.h  hardware_abstraction.c  hardware_abstraction.h  main.c  task_manager.c  task_manager.h
Iteration_8/: Dockerfile  README.md  energy_manager.c  energy_manager.h  error_handling.c  error_handling.h  hardware_abstraction.c  hardware_abstraction.h  iteration_8  main.c  task_manager.c  task_manager.h
doc/soa/: appendix.tex  chap2_sota_old.tex  chapt1.tex  chapt2.tex  chapt3.tex  chapt4.tex  glossary.tex  main.tex  references.bib
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_ecc73ccadfed1792c7fc69c83536300f.html  dir_ecc73ccadfed1792c7fc69c83536300f.js  files.html  files_dup.js  functions.html  functions_vars.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_3.js  all_4.js  all_7.js  all_a.js  all_b.js  classes_1.js  classes_2.js  pages_0.js  (+11 more)
(+19 files in other folders)
